--- a/development-platform-app-study/pom.xml
+++ b/development-platform-app-study/pom.xml
@@ -18,6 +18,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <start-class>com.yangxf.si.SiStudyApplication</start-class>
         <hibernate.version>4.3.11.Final</hibernate.version>
     </properties>
@@ -89,9 +91,30 @@
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
         </dependency>
+        <!-- alibaba的druid数据库连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!--nosql数据库-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--spring2.0集成redis所需common-pool2-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${redis.version}</version>
         </dependency>
         <!-- ======= End Runtime Environment ========= -->
         <!-- ======= Begin Neusoft Apply Core FrameWork ========= -->
@@ -101,18 +124,11 @@
             <artifactId>development-platform-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.neusoft.sl.thirdpart</groupId>
-            <artifactId>barbecue-neusoft</artifactId>
-            <version>1.5-beta1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>net.sourceforge.barbecue</groupId>
+            <artifactId>barbecue</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <!-- ======= End Neusoft Apply Core FrameWork ========= -->
-
         <!-- ======= Begin ThreadPart Componets Dependence ========= -->
         <dependency>
             <groupId>org.projectlombok</groupId>
