--- a/development-platform-core/pom.xml
+++ b/development-platform-core/pom.xml
@@ -75,6 +75,11 @@
             <version>1.2.39</version>
             <!--<scope>compile</scope>-->
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <!-- 插件配置 -->
