--- a/development-platform-study-app/src/main/resources/application.yml
+++ b/development-platform-study-app/src/main/resources/application.yml
@@ -1,23 +1,6 @@
 # ===================================================================
 # 业务大厅应用服务配置
 # ===================================================================
-spring:
-  profiles:
-    active: dev
-  datasource:
-    master:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://127.0.0.1:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
-      username: root
-      password: 1234%^&*
-      filters: wall,mergeStat
-      data-source-name: gunsdb
-  jpa:
-    database: MYSQL
-    hibernate:
-      ddl-auto: none
-    properties.javax.persistence.validation.mode: none
-
 server:
   port: 8080
   servlet:
@@ -25,6 +8,69 @@ server:
 
 info:
   component: development-platform-study-app - 业务开发服务平台应用-学习
+
+spring:
+  profiles:
+    active: dev
+  datasource:
+    druid:
+      oracle:
+         type: com.alibaba.druid.pool.DruidDataSource
+         platform: oracle
+         url: jdbc:oracle:thin:@127.0.0.1:1521/ORCL
+         driverClassName: oracle.jdbc.driver.OracleDriver
+         username: C##development
+         password: C##development
+         initialSize: 5
+         minIdle: 5
+         maxActive: 20
+         maxWait: 60000
+         timeBetweenEvictionRunsMillis: 60000
+         minEvictableIdleTimeMillis: 300000
+         validationQuery: select 1 from dual
+         testWhileIdle: true
+         testOnBorrow: false
+         testOnReturn: false
+         filters: stat,wall,log4
+         logSlowSql: true
+      secondary:
+        type: com.alibaba.druid.pool.DruidDataSource
+        platform: secondary
+        url: jdbc:oracle:thin:@127.0.0.1:1521/ORCL
+        driverClassName: oracle.jdbc.driver.OracleDriver
+        username: C##development
+        password: C##development
+        initialSize: 5
+        minIdle: 5
+        maxActive: 20
+        maxWait: 60000
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 300000
+        validationQuery: select 1 from dual
+        testWhileIdle: true
+        testOnBorrow: false
+        testOnReturn: false
+        filters: stat,wall,log4j
+        logSlowSql: true
+  jpa:
+    database: ORACLE
+    hibernate:
+      ddl-auto: none
+    properties.javax.persistence.validation.mode: none
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: redis
+    database: 0
+    jedis:
+      pool:
+        max-active: 8  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 8 # 连接池中的最大空闲连接
+        min-idle: 0 # 连接池中的最小空闲连接
+        timeout: 0 # 连接超时时间（毫秒）
+
+
 # ===================================================================
 # 公用部分-
 # ===================================================================
