--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.3.5.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -35,7 +35,7 @@
         <!--项目版本定义 -->
         <java.version>1.8</java.version>
 <!--        <spring.version>5.1.8</spring.version>-->
-        <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
         <ojdbc.version>12.1.0.1.0</ojdbc.version>
         <mysql.version>8.0.14</mysql.version>
         <commons-io.version>2.4</commons-io.version>
@@ -62,6 +62,9 @@
         <druid.version>1.1.9</druid.version>
         <mybatis.version>1.3.2</mybatis.version>
         <redis.version>2.4.2</redis.version>
+        <commons-lang3.version>3.3.2</commons-lang3.version>
+        <log4j.version>1.2.17</log4j.version>
+        <devtools.version>2.3.5.RELEASE</devtools.version>
     </properties>
 
     <!-- 项目依赖定义 -->
@@ -82,6 +85,12 @@
                 <groupId>com.yangxf</groupId>
                 <artifactId>development-platform-core</artifactId>
                 <version>${development-platform-core.version}</version>
+            </dependency>
+            <!--  热部署-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-devtools</artifactId>
+                <version>${devtools.version}</version>
             </dependency>
             <!--  Barbecue是一个Java开源类库用于创建遵循各种标准格式的条形码。当前Barbecue能够输出三种图片格式PNG,GIF,JPEG-->
             <dependency>
@@ -129,6 +138,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
             <!-- ============文档支持=========== -->
             <dependency>
                 <groupId>io.springfox</groupId>
@@ -165,6 +179,15 @@
                 <version>${poi.version}</version>
             </dependency>
             <!-- ======== excel解析支持 end ======== -->
+
+            <!--            日志-->
+            <!-- log4 -->
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
