Springboot整合web学习demo主要包括: 返回Json数据、静态资源访问、简单文件上传、自定义错误页

--- a/development-platform-study-app/pom.xml
+++ b/development-platform-study-app/pom.xml
@@ -56,6 +56,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- thymeleaf依赖包-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <!-- JSON Logging for Logstash -->
         <dependency>
