--- a/development-platform-core/pom.xml
+++ b/development-platform-core/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- 插件配置 -->
