--- a/development-platform-study-app/src/main/resources/application.yml
+++ b/development-platform-study-app/src/main/resources/application.yml
@@ -1,17 +1,31 @@
 # ===================================================================
 # 业务大厅应用服务配置
 # ===================================================================
+#tmocat常用配置
 server:
   port: 8080
   servlet:
     context-path: /api
+    session:
+      timeout: 30m
+
+  tomcat:
+    uri-encoding: UTF-8
+    threads:
+      max: 500
+    basedir: home/yangxf/temp
+
+
 
 info:
   component: development-platform-study-app - 业务开发服务平台应用-学习
 
+#数据库配置
 spring:
   profiles:
     active: dev
+    #加密配置
+#    active: dev-ssl
   datasource:
     druid:
       oracle:
@@ -69,7 +83,18 @@ spring:
         max-idle: 8 # 连接池中的最大空闲连接
         min-idle: 0 # 连接池中的最小空闲连接
         timeout: 0 # 连接超时时间（毫秒）
-
+  mvc:
+    static-path-pattern: /static/** #过滤规则
+  resources:
+    static-locations: classpath:/static/ #静态资源位置
+  servlet:
+    multipart:
+      enabled: true #是否开启上传功能
+      file-size-threshold: 0
+      location: F:\demotemp #上传文件
+      max-file-size: 1MB #单个文件最大限制
+      max-request-size: 10MB #多个文件最大总限制
+      resolve-lazily: false #是否延迟解析，默认false
 
 # ===================================================================
 # 公用部分-
